--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
-version: "3.8"
+version: '3.8'
 
 services:
   web:
-    build: .
+    build: .        
     ports:
-      - "8000:8000"
+      - "8000:8000"    
+    volumes:
+      - .:/app
     environment:
-      - DJANGO_SETTINGS_MODULE=aws_rds.settings
+      - DJANGO_SETTINGS_MODULE=aws_rds.settings 
